tests/errors/record-equals-not-colon/main.pa
# Record fields use `:`, not `=`.
def main = { a = 1 }
